# multisig_client

./: Anchor.toml  Cargo.toml  Makefile  Readme.md
programs/multisig/src/: lib.rs  state.rs
src/: consts.rs  main.rs  structs.rs
src/transactions/: approve.rs  create_multisig.rs  create_transaction.rs  mod.rs
